fix word wrap

--- a/portlets/so-portlet/docroot/activities/css/main.css
+++ b/portlets/so-portlet/docroot/activities/css/main.css
@@ -87,7 +87,11 @@ $default-border-color: #E7E7E7;
 	.activity-body, .grouped-activity-body-container {
 		border: 1px solid $default-border-color;
 
-		@include hyphenation;
+		-ms-word-break: break-word;
+		word-break: break-word;
+		-webkit-hyphens: manual;
+		-moz-hyphens: manual;
+		hyphens: manual;
 
 		span {
 			line-height: 1em;
